Simplify org markup as gitea does not support it well

--- a/README.org
+++ b/README.org
@@ -12,19 +12,15 @@ tests). The Makefile can be used both locally on the developer machine
 and remotely on a continuous integration machine. These are the rules
 provided by ~makel.mk~:
 
-- test-ert :: run your ERT (the Emacs Lisp Regression Testing tool)
-              tests.
-- test-buttercup :: run your [[https://github.com/jorgenschaefer/emacs-buttercup][buttercup]] tests.
-- lint-checkdoc :: collect and report checkdoc (the Emacs coding
-                   convention tool) errors.
-- lint-package-lint :: collect and report [[https://github.com/purcell/package-lint][package-lint]] (a linting
-     library for package definitions) errors.
-- lint-compile :: collect and report errors and warnings from the
-                  Emacs Lisp compiler.
-- lint :: starts all linting-related rules.
-- test :: starts all test-related rules (both ert and buttercup tests).
-- check :: starts all lint and test rules.
-- makel-version :: displays makel's version
+- *test-ert* : run your ERT (the Emacs Lisp Regression Testing tool) tests.
+- *test-buttercup* : run your [[https://github.com/jorgenschaefer/emacs-buttercup][buttercup]] tests.
+- *lint-checkdoc* : collect and report checkdoc (the Emacs coding convention tool) errors.
+- *lint-package-lint* : collect and report [[https://github.com/purcell/package-lint][package-lint]] (a linting library for package definitions) errors.
+- *lint-compile* : collect and report errors and warnings from the Emacs Lisp compiler.
+- *lint* : starts all linting-related rules.
+- *test* : starts all test-related rules (both ert and buttercup tests).
+- *check* : starts all lint and test rules.
+- *makel-version* : displays makel's version
 
 What distinguishes makel from similar tools (see below) is its
 simplicity: simplicity to use it in your Emacs package (there are just
@@ -191,8 +187,6 @@ made sure I agree with all decisions I took for makel :-).
 
 See [[file:COPYING][COPYING]]. Copyright (c) 2018-2019 Damien Cassou.
 
-  #+BEGIN_HTML
-  <a href="https://liberapay.com/DamienCassou/donate">
-    <img alt="Donate using Liberapay" src="https://liberapay.com/assets/widgets/donate.svg">
-  </a>
-  #+END_HTML
+<a href="https://liberapay.com/DamienCassou/donate">
+  <img alt="Donate using Liberapay" src="https://liberapay.com/assets/widgets/donate.svg">
+</a>
